# The_Hive

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CDC.md  README.md  ROADMAP.md  docker-compose.yml  escrow_ledger.json  evactl.py  full_build_log.txt  kernel_build_log.txt  promtail-config.yaml  pyproject.toml  rust-toolchain.toml
.github/workflows/: hive-ci.yml  python-tests.yml  rust-check.yml
Documentation/: 01_Architecture_Infrastructure.md  02_EVA_Core_Architecture.md  03_Securite_et_Lois.md  04_Usines_de_Revenus.md  05_Interfaces_et_UX.md  06_Roadmap_Globale.md  CAHIER_DES_CHARGES_UPDATE.md  CDC.md
Documentation/API/: messages_pubsub.md  openapi_banker.yaml  openapi_core.yaml
Documentation/Advanced_AI/: Spec_Genetic_Evolution.md  Spec_Self_Evolving_Architecture.md  Spec_World_Model_RL.md
Documentation/Config/: docker-compose.lite.yaml  docker_compose.yaml  env_example.md  grafana_dashboards.md  lois_template.toml  network_ports.md
Documentation/Database/: schema_qdrant.md  schema_timescale.sql
Documentation/Deploy/: proxmox_setup.md
Documentation/Diagrams/: C4_Architecture.md
Documentation/Experts/: Expert_A_The_Core.md  Expert_B_The_Banker.md  Expert_C_The_Shadow.md  Expert_D_The_Wraith.md  Expert_E_The_Builder.md  Expert_F_The_Sentinel.md  Expert_G_The_Muse.md  Expert_H_The_Sage.md  Expert_I_The_Researcher.md  Expert_J_The_Advocate.md  Expert_K_The_Sovereign.md  Expert_L_The_Keeper.md  Experts_IJK_Extended.md
Documentation/Hive_Internal/: Component_The_Keeper.md  Component_The_Tablet.md  Component_The_Vault.md  Component_The_Watchdog.md
Documentation/Laws/: The_Constitution.md
Documentation/Models/: python_models.py  rust_types.rs
Documentation/Story/: Story_00_Infrastructure.md  Story_01_Kernel_Security.md  Story_02_EVA_Core.md  Story_03_The_Banker.md  Story_04_Nexus_UI.md
Documentation/Tech_Stack/: Tech_Go_Architecture.md  Tech_Julia_Architecture.md  Tech_Python_Architecture.md  Tech_Rust_Architecture.md
Documentation/Testing/: Spec_Testing_AI.md  Spec_Testing_Financial.md  Spec_Testing_Security.md  Spec_Testing_Strategy.md  acceptance_criteria_bdd.md  error_catalog.md  fixtures_test.md
data/: escrow_ledger.json
mnt/tablet/: constitution.toml
scripts/: bootstrap.sh  chaos_test.py  evactl.py  evolution_runner.py  genesis_check.py  genesis_cli.py  genesis_preflight.py  heartbeat.py  start_lite.py  swarm_monitor.py  verify_health.py  verify_laws.py  verify_logic.py
src/eva-accountant/: Dockerfile  pyproject.toml
src/eva-accountant/eva_accountant/: main.py
src/eva-banker/: Dockerfile  pyproject.toml
src/eva-banker/eva_banker/: __init__.py  debt_manager.py  main.py  nemesis.py  skill_library.py  swarm.py
src/eva-banker/eva_banker/models/: gnn_model.py
src/eva-banker/eva_banker/services/: __init__.py  binance_service.py  drone_autoscaler.py  ghost_shield.py  mt5.py  multi_account.py  news_filter.py  risk.py
src/eva-banker/tests/: test_risk.py
src/eva-builder/: Dockerfile  pyproject.toml
src/eva-builder/eva_builder/: cyber_forge.py  main.py
src/eva-builder/eva_builder/services/: librarian.py  mutation.py
src/eva-compliance/: Dockerfile  pyproject.toml
src/eva-compliance/eva_compliance/: legal_wrapper.py  main.py  tax_estimator.py  tax_manager.py
src/eva-core/: Dockerfile  pyproject.toml
src/eva-core/eva_core/: __init__.py  main.py  memory_layer.py  probes.py  self_healing.py  strategy.py
src/eva-core/eva_core/router/: __init__.py  intent.py  orchestrator.py
src/eva-core/eva_core/security/: prompt_guard.py
src/eva-core/eva_core/services/: auth.py  docker_monitor.py  llm.py  memory.py  prompt_master.py  voice.py  websocket.py
src/eva-core/tests/: test_api.py
src/eva-kernel/: Cargo.toml  Dockerfile
src/eva-kernel/src/: audit.rs  kill_switch.rs  laws.rs  lib.rs  main.rs  server.rs  validator.rs
src/eva-kernel/src/protocols/: dynasty.rs  mod.rs  phoenix.rs
src/eva-lab/: Dockerfile  pyproject.toml
src/eva-lab/eva_lab/: arena.py  arena_pcg.py  arena_sandbox.py  backtester.py  dreamer_model.py  genetic_updater.py  jax_optimizer.py  main.py  meditation.py  world_model.py
src/eva-muse/: Dockerfile  pyproject.toml
src/eva-muse/eva_muse/: main.py
src/eva-nervous/: Dockerfile  go.mod  main.go
src/eva-nexus/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/eva-nexus/src/: App.tsx  index.css
src/eva-nexus/src/components/: AdminPanel.tsx  Chat.tsx  Dashboard.tsx  FactoriesView.tsx  LoginPage.tsx  MatrixRain.tsx  MonitoringView.tsx  OSINTView.tsx  (+1 more)
src/eva-quant/: Dockerfile  risk_engine.jl
src/eva-researcher/: Dockerfile  pyproject.toml
src/eva-researcher/eva_researcher/: main.py  report_generator.py
src/eva-rwa/: Dockerfile  pyproject.toml
src/eva-rwa/eva_rwa/: iot_controller.py  main.py  token_bridge.py
src/eva-sage/: Dockerfile  pyproject.toml
src/eva-sage/eva_sage/: main.py
src/eva-sentinel/: Dockerfile  pyproject.toml
src/eva-sentinel/eva_sentinel/: main.py  sentiment_engine.py
src/eva-sentinel/eva_sentinel/services/: blackbox.py  monitor.py  notifier.py
src/eva-sentinel/tests/: test_notifier.py
src/eva-shadow/: Dockerfile  pyproject.toml
src/eva-shadow/eva_shadow/: main.py  shadow_critic.py
src/eva-shadow/eva_shadow/services/: osint.py
src/eva-substrate/: Dockerfile  pyproject.toml
src/eva-substrate/eva_substrate/: circadian_rhythm.py  energy_monitor.py  main.py  resource_allocator.py  scheduler.py
src/eva-wraith/: Dockerfile  pyproject.toml
src/eva-wraith/eva_wraith/: __init__.py  jepa_predictor.py  main.py
src/shared/: README.md  pyproject.toml
src/shared/shared/: __init__.py  auth_middleware.py  broker_bridge.py  circuit_breaker.py  config.py  forensic_logger.py  genetic_optimizer.py  internal_auth.py  math_ops.py  memory_vector.py  models.py  mqtt_client.py  p2p_discovery.py  redis_client.py  roe.py  swarm_helper.py  telemetry.py
src/shared/shared/tests/: test_models.py
src/shared/tests/: test_internal_auth.py
tests/: mock_simulations.py  test_adaptive_memory.py
(+2 files in other folders)
