# THE HIVE Workspace
# Python monorepo avec uv/pip

[project]
name = "the-hive"
version = "0.1.0"
description = "E.V.A. - Entité Virtuelle Autonome"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "John Moncel"}
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["shared", "eva_core", "eva_banker"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.black]
line-length = 100
target-version = ["py311"]

[project.dependencies]
jax = ">=0.4.0"
jaxlib = ">=0.4.0"
torch = ">=2.0.0"
torch-geometric = ">=2.3.0"
numpy = ">=1.24.0"
pydantic = ">=2.0.0"
fastapi = ">=0.100.0"
scipy = ">=1.10.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
