[project]
name = "eva-banker"
version = "0.1.0"
description = "The Banker - Agent Trading THE HIVE"
requires-python = ">=3.11"
dependencies = [
    "shared",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "metatrader5>=5.0.45; sys_platform == 'win32'",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["eva_banker*"]
